fix about alignment

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,14 +1,16 @@
 .a-about {
-  h3 {
-    // margin: 0;
-    color: #000;
-    margin-bottom: 2em;
-    margin-top: 2.2em;
-    font-weight: normal;
-    padding-left: 8px;
-  }
-  p {
-    padding-left: 8px;
+  #content {
+    h3 {
+      // margin: 0;
+      color: #000;
+      margin-bottom: 2em;
+      margin-top: 2.2em;
+      font-weight: normal;
+      padding-left: 8px;
+    }
+    p {
+      padding-left: 8px;
+    }
   }
 }
 .about-column {
